--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Posts</h1>
-<%= link_to 'Registration', session_registrations_path %>
+<%= link_to 'Login', sessions_path %>
+<%= link_to 'Sign Up', registrations_path %>
